# PaddleGAN

./: .gitignore  .gitmodules  .pre-commit-config.yaml  1816512.md  README.md  README_cn.md  README_en.md  amp_op_list  fp32_8_output_dir_log  log.py  log_msvsr_reds_4gps  log_msvsr_reds_4gps_o2  log_msvsr_reds_4gps_test  log_o2_scale_sqrt  log_o2_scale_sqrt_ka4  lsr2_preprocess.py  o1_8_output_dir_log  o1_8_output_dir_log_more  o2_8_output_dir_log_more  requirements.txt  requirments.txt  run_merc.sh  run_msvsr_reds.sh  setup.py
applications/: run.sh
benchmark/: README.md  analysis_log.py  benchmark.yaml  prepare.sh  run_all.sh  run_benchmark.sh
configs/: animeganv2.yaml  animeganv2_pretrain.yaml  aotgan.yaml  basicvsr++_reds.yaml  basicvsr++_vimeo90k_BD.yaml  (+67 more)
face-alignment/: Dockerfile  LICENSE  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
face-alignment/.github/workflows/: test.yml
face-alignment/conda/: meta.yaml
face-alignment/examples/: demo.ipynb  detect_landmarks_in_image.py
face-alignment/face_alignment/: __init__.py  api.py  utils.py
face-alignment/face_alignment/detection/: core.py
face-alignment/face_alignment/detection/blazeface/: __init__.py  blazeface_detector.py  detect.py  net_blazeface.py  utils.py
face-alignment/face_alignment/detection/dlib/: __init__.py  dlib_detector.py
face-alignment/face_alignment/detection/folder/: __init__.py  folder_detector.py
face-alignment/face_alignment/detection/sfd/: bbox.py  detect.py  net_s3fd.py  sfd_detector.py
face-alignment/test/: facealignment_test.py  smoke_test.py  test_utils.py
(+647 files in other folders)
