[bumpversion]
current_version = 1.3.4
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:face_alignment/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[metadata]
description_file = README.md

[bdist_wheel]
universal = 1

[flake8]
exclude = 
    .github,
    examples,
    docs,
    .tox,
    bin,
    dist,
    tools,
    *.egg-info,
    __init__.py,
    *.yml
max-line-length = 160